--- a/.github/workflows/vangers_macos_build.yml
+++ b/.github/workflows/vangers_macos_build.yml
@@ -14,13 +14,34 @@ jobs:
     - name: update repos
       run: brew update
     - name: install libs
-      run: brew install git ninja cmake sdl2 sdl2_net libogg libvorbis ffmpeg
-    - name: clunk download lib
+      run: brew install git ninja cmake sdl2 sdl2_net libogg libvorbis nasm yasm dylibbundler
+    - name: clunk -- download lib
       run: git clone --depth 1 https://github.com/stalkerg/clunk.git clunk
       working-directory: /tmp
-    - name: clunk build and install
+    - name: clunk -- build and install
       run: cmake -DCMAKE_INSTALL_PREFIX=/usr/local -G Ninja . && ninja && sudo ninja install
       working-directory: /tmp/clunk
+    - name: ffmpeg -- download
+      run: git clone --depth 1 --branch n4.2.2 https://git.ffmpeg.org/ffmpeg.git ffmpeg
+    - name: ffmpeg -- configure
+      run: ./configure --enable-shared --prefix=/usr/local
+        --disable-everything
+        --enable-swscale
+        --enable-zlib
+        --enable-demuxer=avi,rawvideo
+        --enable-decoder=png,rawvideo
+        --enable-parser=png
+        --enable-protocol=file
+        --disable-d3d11va
+        --disable-dxva2
+        --disable-doc --disable-ffplay --disable-ffprobe --disable-ffmpeg
+        --disable-static --disable-bzlib --disable-libopenjpeg --disable-iconv
+      working-directory: ffmpeg
+    - name: ffmpeg -- build and install
+      run: |
+        make -j4
+        sudo make install
+      working-directory: ffmpeg
     - name: configure
       run: mkdir build && cd build && cmake -G Ninja ..
     - name: make
