--- a/.github/workflows/vangers_macos_build.yml
+++ b/.github/workflows/vangers_macos_build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: clunk -- download lib
       run: git clone --depth 1 https://github.com/stalkerg/clunk.git clunk
     - name: clunk -- create build dir
-      run: msys2do mkdir clunk/build
+      run: mkdir clunk/build
     - name: clunk -- build and install
       run: cmake -DCMAKE_INSTALL_PREFIX=/usr/local -G Ninja . && ninja && sudo ninja install
       working-directory: clunk/build
