--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
+SET(CMAKE_OSX_DEPLOYMENT_TARGET "10.12" CACHE STRING "Minimum OS X deployment version")
+CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)
+
 # root
 PROJECT(vangers)
-
-CMAKE_MINIMUM_REQUIRED(VERSION 3.1.0)
 
 # modules
 SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
