using macos target for clunk

--- a/.github/workflows/vangers_macos_build.yml
+++ b/.github/workflows/vangers_macos_build.yml
@@ -25,6 +25,8 @@ jobs:
     - name: clunk -- build and install
       run: cmake -DCMAKE_INSTALL_PREFIX=/usr/local -G Ninja .. && ninja && sudo ninja install
       working-directory: clunk/build
+      env:
+        MACOSX_DEPLOYMENT_TARGET: 10.12
     - name: ffmpeg -- download
       run: git clone --depth 1 --branch n4.2.2 https://git.ffmpeg.org/ffmpeg.git ffmpeg
     - name: ffmpeg -- configure
