--- a/.github/workflows/vangers_macos_build.yml
+++ b/.github/workflows/vangers_macos_build.yml
@@ -15,9 +15,11 @@ jobs:
       run: brew update
     - name: install libs
       run: |
-        brew install git ninja cmake libogg libvorbis nasm yasm dylibbundler
-        brew install -s ./sdl2.rb
-        brew install -s ./sdl2_net.rb
+        brew install git ninja cmake nasm yasm dylibbundler
+        brew install -s /formulas/libogg.rb
+        brew install -s /formulas/libvorbis.rb
+        brew install -s ./formulas/sdl2.rb
+        brew install -s ./formulas/sdl2_net.rb
     - name: clunk -- download lib
       run: git clone --depth 1 https://github.com/stalkerg/clunk.git clunk
     - name: clunk -- create build dir
