--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -81,10 +81,44 @@ jobs:
         msys2do cp /mingw64/bin/libgcc_s_seh-1.dll vangers/bin/
         msys2do cp /mingw64/bin/libstdc++-6.dll vangers/bin/
         msys2do cp /mingw64/bin/libwinpthread-1.dll vangers/bin/
-        cp clunk/build/libclunk.dll vangers/bin/
-        cp build/src/vangers.exe vangers/bin/
+        cp ./../clunk/build/libclunk.dll vangers/bin/
+        cp src/vangers.exe vangers/bin/
         msys2do strip vangers/bin/vangers.exe
+      working-directory: build
     - uses: actions/upload-artifact@v1
       with:
         name: Vangers-Release-64
-        path: vangers
+        path: build/vangers
+
+    - name: vangers NBS -- create build dir
+      run: msys2do mkdir build_nbs
+    - name: vangers NBS -- configure
+      run: msys2do cmake -DBINARY_SCRIPT=OFF -G Ninja ..
+      working-directory: build_nbs
+    - name: vangers NBS -- make
+      run: msys2do ninja
+      working-directory: build_nbs
+    - name: vangers NBS -- prepare release folder
+      run: |
+        msys2do mkdir -p vangers/bin
+        msys2do cp /mingw64/bin/SDL2.dll vangers/bin/
+        msys2do cp /mingw64/bin/SDL2_net.dll vangers/bin/
+        msys2do cp /mingw64/bin/avcodec-58.dll vangers/bin/
+        msys2do cp /mingw64/bin/avformat-58.dll vangers/bin/
+        msys2do cp /mingw64/bin/avutil-56.dll vangers/bin/
+        msys2do cp /mingw64/bin/libogg-0.dll vangers/bin/
+        msys2do cp /mingw64/bin/libvorbis-0.dll vangers/bin/
+        msys2do cp /mingw64/bin/libvorbisfile-3.dll vangers/bin/
+        msys2do cp /mingw64/bin/zlib1.dll vangers/bin/
+        msys2do cp /mingw64/bin/libgcc_s_dw2-1.dll vangers/bin/
+        msys2do cp /mingw64/bin/libgcc_s_seh-1.dll vangers/bin/
+        msys2do cp /mingw64/bin/libstdc++-6.dll vangers/bin/
+        msys2do cp /mingw64/bin/libwinpthread-1.dll vangers/bin/
+        cp ./../clunk/build/libclunk.dll vangers/bin/
+        cp src/vangers.exe vangers/bin/
+        msys2do strip vangers/bin/vangers.exe
+      working-directory: build_nbs
+    - uses: actions/upload-artifact@v1
+      with:
+        name: Vangers-Release-NBS-64
+        path: build_nbs/vangers
