[CI, Windows, MingW] Static build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,12 @@ OPTION(ACTINT "Actint user interface in road game" ON)
 
 SET(CMAKE_CONFIGURATION_TYPES "Release;Debug;MinSizeRel;RelWithDebInfo")
 IF(MINGW)
-		SET(CMAKE_FIND_LIBRARY_SUFFIXES ".dll")
+		set(MINGW_LDF "-static" CACHE STRING "Mingw linker flags")
+		SET(MINGW_SDL2_LDF "-lm -ldinput8 -ldxguid -ldxerr8 -luser32 -lgdi32 -lwinmm -limm32 \
+		-lole32 -loleaut32 -lshell32 -lversion -luuid -lsetupapi -ladvapi32" CACHE STRING "Mingw SDL2 linker flags")
+
+		SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
+		SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${MINGW_LDF}" CACHE INTERNAL "")
 ENDIF()
 
 set(CMAKE_CXX_STANDARD 14)
@@ -27,8 +32,8 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 FIND_PACKAGE(SDL2 REQUIRED)
 FIND_PACKAGE(SDL2_net REQUIRED)
 FIND_PACKAGE(Ogg REQUIRED)
-FIND_PACKAGE(Vorbis REQUIRED)
 FIND_PACKAGE(VorbisFile REQUIRED)
+FIND_PACKAGE(Vorbis REQUIRED)
 
 FIND_PACKAGE(Clunk REQUIRED)
 
@@ -52,7 +57,7 @@ ENDIF(DIAGEN_TEST)
 INCLUDE_DIRECTORIES(SYSTEM
 	${ZLIB_INCLUDE_DIR}
 	${SDL2_INCLUDE_DIR}
-	${SDL2_NET_INCLUDE_DIR}
+	${SDL2_NET_INCLUDE_DIRS}
 	${FFMPEG_INCLUDE_DIRS}
 	${CLUNK_INCLUDE_DIR}
 	${OGG_INCLUDE_DIR}
