--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -77,24 +77,30 @@ ADD_EXECUTABLE(vangers ${vangers_SRCS})
 IF(WIN32)
 	SET(WIN_LIB 
 		wsock32
+		iphlpapi
+		bcrypt
+		opengl32
+		ws2_32
 		#-mwindows
 		#-Wl,-subsystem,windows
 	)
 ENDIF(WIN32)
 
+
 TARGET_LINK_LIBRARIES(vangers
-	${SDL2_LIBRARY}
-	${OGG_LIBRARY}
-	${VORBIS_LIBRARY}
-	${VORBISFILE_LIBRARY}
-	${CLUNK_LIBRARY}
-	${SDL2_NET_LIBRARY}
-	${FFMPEG_LIBRARIES}
-	${ZLIB_LIBRARIES}
-	${OPENGL_LIBRARIES}
-	${WIN_LIB}
-	${STEAM_LIBS}
 	xtool
 	xgraph
 	xsound
+	${SDL2_LIBRARY}
+	${VORBISFILE_LIBRARY}
+	${VORBIS_LIBRARY}
+	${CLUNK_LIBRARY}
+	${SDL2_NET_LIBRARIES}
+	${FFMPEG_LIBRARIES}
+	${OGG_LIBRARY}
+	${ZLIB_LIBRARIES}
+	${MINGW_SDL2_LDF}
+	${WIN_LIB}
+	${OPENGL_LIBRARIES}
+	${STEAM_LIBS}
 )
