--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -32,14 +32,14 @@ jobs:
       run: msys2do mkdir clunk/build
     - name: clunk -- build and install
       run: |
-        msys2do cmake -DCMAKE_INSTALL_PREFIX=/mingw64 -G Ninja ..
+        msys2do cmake -DCMAKE_INSTALL_PREFIX=/mingw64 -DBUILD_SHARED_LIBS=OFF -DCMAKE_EXE_LINKER_FLAGS="-static" -G Ninja ..
         msys2do ninja
         msys2do ninja install
       working-directory: clunk/build
     - name: ffmpeg -- download
       run: git clone --depth 1 --branch n4.2.2 https://git.ffmpeg.org/ffmpeg.git ffmpeg
     - name: ffmpeg -- configure
-      run: msys2do ./configure --enable-shared --prefix=/mingw64
+      run: msys2do ./configure --enable-static --disable-shared --prefix=/mingw64
         --disable-everything
         --enable-swscale
         --enable-zlib
@@ -50,7 +50,7 @@ jobs:
         --disable-d3d11va
         --disable-dxva2
         --disable-doc --disable-ffplay --disable-ffprobe --disable-ffmpeg
-        --disable-static --disable-bzlib --disable-libopenjpeg --disable-iconv
+        --disable-bzlib --disable-libopenjpeg --disable-iconv
       working-directory: ffmpeg
     - name: ffmpeg -- build and install
       run: |
@@ -68,20 +68,6 @@ jobs:
     - name: vangers -- prepare release folder
       run: |
         msys2do mkdir -p vangers/bin
-        msys2do cp /mingw64/bin/SDL2.dll vangers/bin/
-        msys2do cp /mingw64/bin/SDL2_net.dll vangers/bin/
-        msys2do cp /mingw64/bin/avcodec-58.dll vangers/bin/
-        msys2do cp /mingw64/bin/avformat-58.dll vangers/bin/
-        msys2do cp /mingw64/bin/avutil-56.dll vangers/bin/
-        msys2do cp /mingw64/bin/libogg-0.dll vangers/bin/
-        msys2do cp /mingw64/bin/libvorbis-0.dll vangers/bin/
-        msys2do cp /mingw64/bin/libvorbisfile-3.dll vangers/bin/
-        msys2do cp /mingw64/bin/zlib1.dll vangers/bin/
-        msys2do cp /mingw64/bin/libgcc_s_dw2-1.dll vangers/bin/
-        msys2do cp /mingw64/bin/libgcc_s_seh-1.dll vangers/bin/
-        msys2do cp /mingw64/bin/libstdc++-6.dll vangers/bin/
-        msys2do cp /mingw64/bin/libwinpthread-1.dll vangers/bin/
-        cp ./../clunk/build/libclunk.dll vangers/bin/
         cp src/vangers.exe vangers/bin/
         msys2do strip vangers/bin/vangers.exe
       working-directory: build
@@ -101,20 +87,6 @@ jobs:
     - name: vangers NBS -- prepare release folder
       run: |
         msys2do mkdir -p vangers/bin
-        msys2do cp /mingw64/bin/SDL2.dll vangers/bin/
-        msys2do cp /mingw64/bin/SDL2_net.dll vangers/bin/
-        msys2do cp /mingw64/bin/avcodec-58.dll vangers/bin/
-        msys2do cp /mingw64/bin/avformat-58.dll vangers/bin/
-        msys2do cp /mingw64/bin/avutil-56.dll vangers/bin/
-        msys2do cp /mingw64/bin/libogg-0.dll vangers/bin/
-        msys2do cp /mingw64/bin/libvorbis-0.dll vangers/bin/
-        msys2do cp /mingw64/bin/libvorbisfile-3.dll vangers/bin/
-        msys2do cp /mingw64/bin/zlib1.dll vangers/bin/
-        msys2do cp /mingw64/bin/libgcc_s_dw2-1.dll vangers/bin/
-        msys2do cp /mingw64/bin/libgcc_s_seh-1.dll vangers/bin/
-        msys2do cp /mingw64/bin/libstdc++-6.dll vangers/bin/
-        msys2do cp /mingw64/bin/libwinpthread-1.dll vangers/bin/
-        cp ./../clunk/build/libclunk.dll vangers/bin/
         cp src/vangers.exe vangers/bin/
         msys2do strip vangers/bin/vangers.exe
       working-directory: build_nbs
