--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -63,7 +63,7 @@ jobs:
       run: msys2do cmake -G Ninja ..
       working-directory: build
     - name: vangers -- make
-      run: msys2do ninja
+      run: msys2do cmake --build . --target vangers
       working-directory: build
     - name: vangers -- prepare release folder
       run: |
@@ -82,7 +82,7 @@ jobs:
       run: msys2do cmake -DBINARY_SCRIPT=OFF -G Ninja ..
       working-directory: build_nbs
     - name: vangers NBS -- make
-      run: msys2do ninja
+      run: msys2do cmake --build . --target vangers
       working-directory: build_nbs
     - name: vangers NBS -- prepare release folder
       run: |
