--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ OPTION(ACTINT "Actint user interface in road game" ON)
 SET(CMAKE_CONFIGURATION_TYPES "Release;Debug;MinSizeRel;RelWithDebInfo")
 IF(MINGW)
 		SET(CMAKE_FIND_LIBRARY_SUFFIXES ".dll")
+		SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")
 ENDIF()
 
 set(CMAKE_CXX_STANDARD 14)
@@ -52,7 +53,7 @@ ENDIF(DIAGEN_TEST)
 INCLUDE_DIRECTORIES(SYSTEM
 	${ZLIB_INCLUDE_DIR}
 	${SDL2_INCLUDE_DIR}
-	${SDL2_NET_INCLUDE_DIR}
+	${SDL2_NET_INCLUDE_DIRS}
 	${FFMPEG_INCLUDE_DIRS}
 	${CLUNK_INCLUDE_DIR}
 	${OGG_INCLUDE_DIR}
