use proper variable for sdl net include dirs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,7 @@ ENDIF(DIAGEN_TEST)
 INCLUDE_DIRECTORIES(SYSTEM
 	${ZLIB_INCLUDE_DIR}
 	${SDL2_INCLUDE_DIR}
-	${SDL2_NET_INCLUDE_DIR}
+	${SDL2_NET_INCLUDE_DIRS}
 	${FFMPEG_INCLUDE_DIRS}
 	${CLUNK_INCLUDE_DIR}
 	${OGG_INCLUDE_DIR}
