--- a/.github/workflows/vangers_linux_build.yml
+++ b/.github/workflows/vangers_linux_build.yml
@@ -19,7 +19,7 @@ jobs:
       run: git clone --depth 1 https://github.com/stalkerg/clunk.git clunk
       working-directory: /tmp
     - name: clunk build and install
-      run: cmake -DCMAKE_INSTALL_PREFIX=/usr . && make && sudo make install
+      run: cmake -DCMAKE_INSTALL_PREFIX=/usr -DBINARY_SCRIPT=OFF. && make && sudo make install
       working-directory: /tmp/clunk
     - name: configure
       run: mkdir build && cd build && cmake ..
