--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -60,7 +60,7 @@ jobs:
     - name: vangers -- create build dir
       run: msys2do mkdir build
     - name: vangers -- configure
-      run: msys2do cmake -G Ninja ..
+      run: msys2do cmake -G Ninja -DBINARY_SCRIPT=OFF ..
       working-directory: build
     - name: vangers -- make
       run: msys2do ninja
