--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ INCLUDE_DIRECTORIES(SYSTEM
 )
 
 SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wextra")
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-invalid-source-encoding -O2 -msse2 -ftree-vectorize -ffast-math")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -msse2 -ftree-vectorize -ffast-math")
 # For modern gcc
 add_definitions(-D_USE_MATH_DEFINES)
 
