try to use latest version off gcc for win32

--- a/.github/workflows/vangers_windows_32_build.yml
+++ b/.github/workflows/vangers_windows_32_build.yml
@@ -12,7 +12,9 @@ jobs:
     steps:
     - uses: numworks/setup-msys2@v1
       with:
-        msystem: MINGW64
+        msystem: MINGW32
+    - name: update libs
+      run: msys2do pacman -Syu
     - name: install libs
       run: msys2do pacman --noconfirm -S
         mingw-w64-i686-ninja
