try to update for new packagers v2

--- a/.github/workflows/vangers_windows_32_build.yml
+++ b/.github/workflows/vangers_windows_32_build.yml
@@ -19,6 +19,9 @@ jobs:
         msys2do curl -O http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig
         msys2do pacman-key --verify msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig
         msys2do pacman -U msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz
+        msys2do rm -r /etc/pacman.d/gnupg/
+        msys2do pacman-key --init
+        msys2do pacman-key --populate msys2
         msys2do pacman -Syu
     - name: install libs
       run: msys2do pacman --noconfirm -S
