--- a/.github/workflows/vangers_windows_32_build.yml
+++ b/.github/workflows/vangers_windows_32_build.yml
@@ -10,19 +10,10 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-    - uses: numworks/setup-msys2@v1
+    - uses: stalkerg/setup-msys2@v1
       with:
         msystem: MINGW32
-    - name: update libs
-      run: |
-        msys2do curl -O http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz
-        msys2do curl -O http://repo.msys2.org/msys/x86_64/msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig
-        msys2do pacman-key --verify msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz.sig
-        msys2do pacman -U msys2-keyring-r21.b39fb11-1-any.pkg.tar.xz
-        msys2do rm -r /etc/pacman.d/gnupg/
-        msys2do pacman-key --init
-        msys2do pacman-key --populate msys2
-        msys2do pacman -Syu
+        update: true
     - name: install libs
       run: msys2do pacman --noconfirm -S
         mingw-w64-i686-ninja
