--- a/.github/рабочие процессы/vangers_windows_64_build.yml
+++ b/.github/рабочие процессы/vangers_windows_64_build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ master ]
   pull_request:
-    branches: [ master, 60fps, hd_v2 ]
+    branches: [ master, 60fps, hd_v2 , EnaB_MoDe]
 
 jobs:
   build:
