--- a/.github/рабочие процессы/vangers_windows_64_build.yml
+++ b/.github/рабочие процессы/vangers_windows_64_build.yml
@@ -2,7 +2,7 @@ name: Vangers Windows 64bit Build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, EnaB_MoDe ]
   pull_request:
     branches: [ master, 60fps, hd_v2 , EnaB_MoDe]
 
