--- a/.github/workflows/vangers_windows_32_build.yml
+++ b/.github/workflows/vangers_windows_32_build.yml
@@ -2,7 +2,7 @@ name: Vangers Windows 32bit Build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, M4D ]
   pull_request:
     branches: [ master, 60fps, hd_v2 ]
 
