--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -2,9 +2,9 @@ name: Vangers Windows 64bit Build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, M4D ]
   pull_request:
-    branches: [ master, 60fps, hd_v2 ]
+    branches: [ master, 60fps, hd_v2, M4D ]
 
 jobs:
   build:
