--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -1,4 +1,4 @@
-name: Vangers Windows 64bit Build
+name: Vangers[M4D] Windows 64bit Build
 
 on:
   push:
@@ -88,5 +88,5 @@ jobs:
         msys2do strip vangers/bin/vangers_server.exe
     - uses: actions/upload-artifact@v1
       with:
-        name: Vangers-Release-64
+        name: Vangers[M4D]-64
         path: vangers
