--- a/.github/workflows/vangers_macos_build.yml
+++ b/.github/workflows/vangers_macos_build.yml
@@ -1,10 +1,10 @@
-name: Vangers MacOS Build
+name: Vangers[M4D] MacOS
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, M4D ]
   pull_request:
-    branches: [ master, 60fps, hd_v2 ]
+    branches: [ master, 60fps, hd_v2, M4D ]
 
 jobs:
   build:
