Fix dangling else
fixed dangling else issues by adding missing {}

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,8 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -msse2 -ftree-vectorize -ffast-math"
 # For modern gcc
 add_definitions(-D_USE_MATH_DEFINES)
 
+add_compile_options(-Werror=dangling-else)
+
 # subdirs
 ADD_SUBDIRECTORY("src")
 ADD_SUBDIRECTORY("lib/xgraph")
