--- a/.github/workflows/vangers_linux_build.yml
+++ b/.github/workflows/vangers_linux_build.yml
@@ -2,7 +2,7 @@ name: Vangers Linux Build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, patch-6 ]
   pull_request:
     branches: [ master, 60fps, hd_v2 ]
 
