ARM 64 and release/dbg build fixes
Fix script data overflows detected by Asan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,8 +61,13 @@ INCLUDE_DIRECTORIES(SYSTEM
 	${STEAM_INCLUDE_DIR}
 )
 
+INCLUDE(CheckCXXCompilerFlag)
 SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wextra")
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -msse2 -ftree-vectorize -ffast-math")
+SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS} -O2 -ftree-vectorize -ffast-math")
+CHECK_CXX_COMPILER_FLAG("-msse2" HAVE_SIMDSSE)
+IF(HAVE_SIMDSSE)
+  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -msse2")
+ENDIF()
 # For modern gcc
 add_definitions(-D_USE_MATH_DEFINES)
 
