surmap: changes to work with latest version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,3 +88,4 @@ ADD_SUBDIRECTORY("lib/xsound")
 ADD_SUBDIRECTORY("lib/xtool")
 ADD_SUBDIRECTORY("lib/utils")
 ADD_SUBDIRECTORY("server")
+ADD_SUBDIRECTORY("surmap")
