--- a/.github/workflows/vangers_windows_32_build.yml
+++ b/.github/workflows/vangers_windows_32_build.yml
@@ -2,7 +2,7 @@ name: Vangers Windows 32bit Build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, surmap_dilesoft ]
   pull_request:
     branches: [ master, 60fps, hd_v2 ]
 
@@ -86,6 +86,8 @@ jobs:
         msys2do strip vangers/bin/vangers.exe
         cp build/server/vangers_server.exe vangers/bin/
         msys2do strip vangers/bin/vangers_server.exe
+        cp build/surmap/surmap.exe vangers/bin/
+        msys2do strip vangers/bin/surmap.exe
     - uses: actions/upload-artifact@v1
       with:
         name: Vangers-Release-32
