--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -86,6 +86,7 @@ jobs:
         msys2do strip vangers/bin/vangers.exe
         cp build/server/vangers_server.exe vangers/bin/
         msys2do strip vangers/bin/vangers_server.exe
+        cp build/surmap/surmap.exe vangers/bin/
     - uses: actions/upload-artifact@v1
       with:
         name: Vangers-Release-64
