--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -1,10 +1,7 @@
 name: Vangers Windows 64bit Build
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master, 60fps, hd_v2 ]
+  push, pull_request
 
 jobs:
   build:
