--- a/.github/workflows/vangers_linux_build.yml
+++ b/.github/workflows/vangers_linux_build.yml
@@ -1,10 +1,6 @@
 name: Vangers Linux Build
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master, 60fps, hd_v2 ]
+on: [push, pull_request]
 
 jobs:
   build:
