--- a/.github/workflows/vangers_windows_64_build.yml
+++ b/.github/workflows/vangers_windows_64_build.yml
@@ -59,7 +59,7 @@ jobs:
       run: msys2do cmake -G Ninja ..
       working-directory: build
     - name: vangers -- make
-      run: msys2do ninja
+      run: msys2do ninja vangers
       working-directory: build
     - name: vangers -- prepare release folder
       run: |
