remove cellar from formulas

--- a/.github/workflows/vangers_macos_build.yml
+++ b/.github/workflows/vangers_macos_build.yml
@@ -13,7 +13,7 @@ jobs:
     #     brew update
     - name: install libs
       run: |
-        brew install ninja yasm dylibbundler curl
+        brew install ninja yasm dylibbundler openssl
         brew reinstall -s ./formulas/libsndfile.rb
         brew reinstall -s ./formulas/libogg.rb
         brew reinstall -s ./formulas/libvorbis.rb
