try to properly use curl

--- a/.github/workflows/vangers_macos_build.yml
+++ b/.github/workflows/vangers_macos_build.yml
@@ -14,9 +14,12 @@ jobs:
     - name: install libs
       run: |
         brew install ninja yasm dylibbundler curl-openssl
-        brew uninstall curl
         export PATH="/usr/local/opt/curl-openssl/bin:$PATH"
         echo 'export PATH="/usr/local/opt/curl-openssl/bin:$PATH"' >> ~/.zshrc
+    - name: install our libs
+      env:
+        PATH="/usr/local/opt/curl-openssl/bin:$PATH"
+      run: |
         brew reinstall -s ./formulas/libsndfile.rb
         brew reinstall -s ./formulas/libogg.rb
         brew reinstall -s ./formulas/libvorbis.rb
