--- a/.github/workflows/vangers_macos_build.yml
+++ b/.github/workflows/vangers_macos_build.yml
@@ -18,10 +18,9 @@ jobs:
         echo 'export PATH="/usr/local/opt/curl-openssl/bin:$PATH"' >> ~/.zshrc
     - name: install our libs
       run: |
-        export PATH="/usr/local/opt/curl-openssl/bin:$PATH"
-        brew reinstall -s ./formulas/libsndfile.rb
-        brew reinstall -s ./formulas/libogg.rb
-        brew reinstall -s ./formulas/libvorbis.rb
+        PATH="/usr/local/opt/curl-openssl/bin:$PATH" brew reinstall -s ./formulas/libsndfile.rb
+        PATH="/usr/local/opt/curl-openssl/bin:$PATH" brew reinstall -s ./formulas/libogg.rb
+        PATH="/usr/local/opt/curl-openssl/bin:$PATH" brew reinstall -s ./formulas/libvorbis.rb
         brew install -s ./formulas/sdl2.rb
         brew install -s ./formulas/sdl2_net.rb
     - name: clunk -- download lib
