--- a/.github/workflows/vangers_macos_build.yml
+++ b/.github/workflows/vangers_macos_build.yml
@@ -13,14 +13,12 @@ jobs:
     #     brew update
     - name: install libs
       run: |
-        brew install ninja yasm dylibbundler curl-openssl
-        export PATH="/usr/local/opt/curl-openssl/bin:$PATH"
-        echo 'export PATH="/usr/local/opt/curl-openssl/bin:$PATH"' >> ~/.zshrc
+        brew install ninja yasm dylibbundler
     - name: install our libs
       run: |
-        PATH="/usr/local/opt/curl-openssl/bin:$PATH" brew reinstall -s ./formulas/libsndfile.rb
-        PATH="/usr/local/opt/curl-openssl/bin:$PATH" brew reinstall -s ./formulas/libogg.rb
-        PATH="/usr/local/opt/curl-openssl/bin:$PATH" brew reinstall -s ./formulas/libvorbis.rb
+        brew reinstall -s ./formulas/libsndfile.rb
+        brew reinstall -s ./formulas/libogg.rb
+        brew reinstall -s ./formulas/libvorbis.rb
         brew install -s ./formulas/sdl2.rb
         brew install -s ./formulas/sdl2_net.rb
     - name: clunk -- download lib
